objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B Widgets</fullName>
        <description>Bulk Sales of physical products to customer companies</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Call Center Business</fullName>
        <description>Customer Service Opportunities that are outsourced to us</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Job Opportunity</fullName>
        <description>Sales Process for a Project Opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Interview Request</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Resume Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Project Opportunity</fullName>
        <description>Sales Process for a Project Opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Interview Request</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Resume Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Property Management</fullName>
        <description>Process for opportunities related to our Property Management division</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Volunteer Opportunity</fullName>
        <description>Sales Process for Volunteer Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Interview Request</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Resume Submitted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact name of recruiter</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Length__c</fullName>
        <description>The length of the Job Contract</description>
        <label>Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <description>This is for job type-Contract, Contract to Hire, Full Time</description>
        <label>Job Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                    <default>true</default>
                    <label>Contract</label>
                </value>
                <value>
                    <fullName>Contract to Hire</fullName>
                </value>
                <value>
                    <fullName>Full time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jobs_Website__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jobs Website</label>
        <referenceTo>Jobs_Website__c</referenceTo>
        <relationshipLabel>Job Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <description>Annual Salary if position is full time</description>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W2_Rate__c</fullName>
        <description>Rate per hour on W2</description>
        <label>W2 Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>B2B_Widgets</fullName>
        <active>true</active>
        <businessProcess>B2B Widgets</businessProcess>
        <label>B2B Widgets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Call_Center_Business</fullName>
        <active>true</active>
        <businessProcess>Call Center Business</businessProcess>
        <label>Call Center Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Job Opportunity</businessProcess>
        <description>Employment Opportunity</description>
        <label>Job Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Project Opportunity</businessProcess>
        <description>Freelance side project opportunities, typically part-time</description>
        <label>Project Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Management</fullName>
        <active>true</active>
        <businessProcess>Property Management</businessProcess>
        <label>Property Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Volunteer Opportunity</businessProcess>
        <description>Volunteer Opportunities - typically unpaid</description>
        <label>Volunteer Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>